gr-recipe-store api to get and save all the cuisines

It checks if the cuisine is already present in the hashtable else inserts it

https://bugzilla.gnome.org/show_bug.cgi?id=779618